--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<meta http-equiv="refresh" content="0; url=https://award.skoch.in/apply/delhi/?utm_campaign=DelhiStudy" />
-Redirecting to <a href="https://award.skoch.in/apply/delhi/?utm_campaign=DelhiStudy">https://award.skoch.in/apply/delhi/?utm_campaign=DelhiStudy</a>
+<meta http-equiv="refresh" content="0; url=https://award.skoch.in/apply/chhattisgarh/?utm_campaign=ChhattisgarhStudy" />
+Redirecting to <a href="https://award.skoch.in/apply/chhattisgarh/?utm_campaign=ChhattisgarhStudy">https://award.skoch.in/apply/chhattisgarh/?utm_campaign=ChhattisgarhStudy</a>
